@@ -12,7 +12,7 @@
 
     <groupId>io.swagger.codegen.v3</groupId>
     <artifactId>swagger-codegen-generators</artifactId>
-    <version>1.0.24-SNAPSHOT</version>
+    <version>1.0.34-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <build>
@@ -66,10 +66,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -252,18 +254,18 @@
         </dependency>
     </dependencies>
     <properties>
-        <swagger-codegen-version>3.0.24-SNAPSHOT</swagger-codegen-version>
-        <swagger-parser-version>2.0.23</swagger-parser-version>
-        <swagger-core-version>2.1.4</swagger-core-version>
-        <jackson-version>2.10.3</jackson-version>
+        <swagger-codegen-version>3.0.34-SNAPSHOT</swagger-codegen-version>
+        <swagger-parser-version>2.0.30</swagger-parser-version>
+        <swagger-core-version>2.1.13</swagger-core-version>
+        <jackson-version>2.12.1</jackson-version>
         <scala-version>2.11.1</scala-version>
         <felix-version>3.3.0</felix-version>
-        <commons-io-version>2.4</commons-io-version>
-        <commons-cli-version>1.2</commons-cli-version>
+        <commons-io-version>2.11.0</commons-io-version>
+        <commons-cli-version>1.5.0</commons-cli-version>
         <junit-version>4.13.1</junit-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
-        <commons-lang-version>3.4</commons-lang-version>
-        <slf4j-version>1.7.12</slf4j-version>
+        <commons-lang-version>3.12.0</commons-lang-version>
+        <slf4j-version>1.7.35</slf4j-version>
         <scala-maven-plugin-version>3.2.1</scala-maven-plugin-version>
         <testng-version>6.9.6</testng-version>
         <surefire-version>2.19.1</surefire-version>
